teliko2/myparser.output
State 2 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce, 2 reduce/reduce
State 58 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decList

    2 expr: IDENTIFIER
    3     | INTEGER_CONST
    4     | REAL_CONST
    5     | STRING
    6     | read_int
    7     | read_string
    8     | read_real
    9     | KW_TRUE
   10     | KW_FALSE
   11     | func
   12     | KW_NOT expr
   13     | '-' expr
   14     | expr '*' expr
   15     | expr '/' expr
   16     | expr '%' expr
   17     | expr '+' expr
   18     | expr '-' expr
   19     | expr '>' expr
   20     | expr '=' expr
   21     | expr NOT_EQUAL expr
   22     | expr '<' expr
   23     | expr EQUAL_OR_LESS expr
   24     | expr KW_AND expr
   25     | expr KW_OR expr
   26     | '(' expr ')'

   27 funcParameters: %empty
   28               | identifiers
   29               | expr
   30               | funcParameters ',' expr
   31               | identifiers ':' data_types
   32               | identifiers ':' data_types ',' funcParameters

   33 read_string: RDSTRING '(' ')'

   34 read_int: RDINT '(' ')'

   35 read_real: RDREAL '(' ')'

   36 write_string: WRTSTRING '(' STRING ')'
   37             | WRTSTRING '(' expr ')'

   38 write_int: WRTINT '(' expr ')'

   39 write_real: WRTREAL '(' STRING ')'

   40 allCommands: IDENTIFIER ASSIGN expr ';'
   41            | ifCommand ';'
   42            | funcDecl
   43            | func ';'
   44            | whileCommand ';'
   45            | returnCommand ';'
   46            | varDecl
   47            | write_int ';'
   48            | write_real ';'
   49            | write_string ';'
   50            | read_int ';'
   51            | read_real ';'
   52            | read_string ';'

   53 decList: varDecl
   54        | funcDecl
   55        | varDecl decList
   56        | funcDecl decList
   57        | KW_CONST identifiers ':' data_types ';'
   58        | KW_CONST identifiers ':' data_types ';' decList

   59 funcDecl: KW_CONST IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types
   60         | KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body '}'
   61         | KW_CONST IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types ARROW '{' body '}' ';'

   62 func: IDENTIFIER '(' funcParameters ')'

   63 body: allCommands
   64     | allCommands body

   65 ifCommand: KW_IF expr KW_THEN body
   66          | KW_IF expr KW_THEN body KW_FI
   67          | ifCommand KW_ELSE body
   68          | ifCommand KW_ELSE body KW_FI

   69 whileCommand: KW_WHILE expr KW_LOOP body KW_POOL

   70 returnCommand: KW_RETURN
   71              | KW_RETURN expr

   72 varDecl: KW_LET
   73        | KW_LET identifiers ':' data_types ';'

   74 arrayDecl: '[' expr ']' ':' data_types

   75 data_types: KW_INT
   76           | KW_REAL
   77           | KW_BOOL
   78           | KW_STRING

   79 identifiers: IDENTIFIER
   80            | IDENTIFIER ',' identifiers
   81            | IDENTIFIER ASSIGN expr
   82            | IDENTIFIER ASSIGN expr ',' identifiers
   83            | IDENTIFIER arrayDecl
   84            | IDENTIFIER arrayDecl ASSIGN expr


Terminals, with rules where they appear

$end (0) 0
'%' (37) 16
'(' (40) 26 33 34 35 36 37 38 39 59 60 61 62
')' (41) 26 33 34 35 36 37 38 39 59 60 61 62
'*' (42) 14
'+' (43) 17
',' (44) 30 32 80 82
'-' (45) 13 18
'/' (47) 15
':' (58) 31 32 57 58 59 60 61 73 74
';' (59) 40 41 43 44 45 47 48 49 50 51 52 57 58 61 73
'<' (60) 22
'=' (61) 20
'>' (62) 19
'[' (91) 74
']' (93) 74
'{' (123) 60 61
'}' (125) 60 61
error (256)
IDENTIFIER (258) 2 40 59 61 62 79 80 81 82 83 84
INTEGER_CONST (259) 3
REAL_CONST (260) 4
STRING (261) 5 36 39
KW_INT (262) 60 75
KW_REAL (263) 76
KW_BOOL (264) 77
KW_STRING (265) 78
KW_TRUE (266) 9
KW_FALSE (267) 10
KW_IF (268) 65 66
KW_THEN (269) 65 66
KW_ELSE (270) 67 68
KW_FI (271) 66 68
KW_WHILE (272) 69
KW_LOOP (273) 69
KW_POOL (274) 69
KW_CONST (275) 57 58 59 60 61
KW_LET (276) 72 73
KW_RETURN (277) 70 71
KW_NOT (278) 12
KW_AND (279) 24
KW_OR (280) 25
KW_START (281) 60
ASSIGN (282) 40 59 60 61 81 82 84
EQUAL_OR_LESS (283) 23
NOT_EQUAL (284) 21
ARROW (285) 60 61
RDSTRING (286) 33
RDINT (287) 34
RDREAL (288) 35
WRTSTRING (289) 36 37
WRTINT (290) 38
WRTREAL (291) 39


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1, on right: 0
expr (56)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26, on right: 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 29 30 37 38 40 65 66 69 71 74 81 82 84
funcParameters (57)
    on left: 27 28 29 30 31 32, on right: 30 32 59 61 62
read_string (58)
    on left: 33, on right: 7 52
read_int (59)
    on left: 34, on right: 6 50
read_real (60)
    on left: 35, on right: 8 51
write_string (61)
    on left: 36 37, on right: 49
write_int (62)
    on left: 38, on right: 47
write_real (63)
    on left: 39, on right: 48
allCommands (64)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52, on right: 63 64
decList (65)
    on left: 53 54 55 56 57 58, on right: 1 55 56 58
funcDecl (66)
    on left: 59 60 61, on right: 42 54 56
func (67)
    on left: 62, on right: 11 43
body (68)
    on left: 63 64, on right: 60 61 64 65 66 67 68 69
ifCommand (69)
    on left: 65 66 67 68, on right: 41 67 68
whileCommand (70)
    on left: 69, on right: 44
returnCommand (71)
    on left: 70 71, on right: 45
varDecl (72)
    on left: 72 73, on right: 46 53 55
arrayDecl (73)
    on left: 74, on right: 83 84
data_types (74)
    on left: 75 76 77 78, on right: 31 32 57 58 59 61 73 74
identifiers (75)
    on left: 79 80 81 82 83 84, on right: 28 31 32 57 58 73 80 82


State 0

    0 $accept: . program $end
    1 program: . decList
   53 decList: . varDecl
   54        | . funcDecl
   55        | . varDecl decList
   56        | . funcDecl decList
   57        | . KW_CONST identifiers ':' data_types ';'
   58        | . KW_CONST identifiers ':' data_types ';' decList
   59 funcDecl: . KW_CONST IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types
   60         | . KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body '}'
   61         | . KW_CONST IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types ARROW '{' body '}' ';'
   72 varDecl: . KW_LET
   73        | . KW_LET identifiers ':' data_types ';'

    KW_CONST  shift, and go to state 1
    KW_LET    shift, and go to state 2

    program   go to state 3
    decList   go to state 4
    funcDecl  go to state 5
    varDecl   go to state 6


State 1

   57 decList: KW_CONST . identifiers ':' data_types ';'
   58        | KW_CONST . identifiers ':' data_types ';' decList
   59 funcDecl: KW_CONST . IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types
   60         | KW_CONST . KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body '}'
   61         | KW_CONST . IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types ARROW '{' body '}' ';'
   79 identifiers: . IDENTIFIER
   80            | . IDENTIFIER ',' identifiers
   81            | . IDENTIFIER ASSIGN expr
   82            | . IDENTIFIER ASSIGN expr ',' identifiers
   83            | . IDENTIFIER arrayDecl
   84            | . IDENTIFIER arrayDecl ASSIGN expr

    IDENTIFIER  shift, and go to state 7
    KW_START    shift, and go to state 8

    identifiers  go to state 9


State 2

   72 varDecl: KW_LET .  [$end, IDENTIFIER, KW_IF, KW_ELSE, KW_FI, KW_WHILE, KW_POOL, KW_CONST, KW_LET, KW_RETURN, RDSTRING, RDINT, RDREAL, WRTSTRING, WRTINT, WRTREAL, '}', ';']
   73        | KW_LET . identifiers ':' data_types ';'
   79 identifiers: . IDENTIFIER
   80            | . IDENTIFIER ',' identifiers
   81            | . IDENTIFIER ASSIGN expr
   82            | . IDENTIFIER ASSIGN expr ',' identifiers
   83            | . IDENTIFIER arrayDecl
   84            | . IDENTIFIER arrayDecl ASSIGN expr

    IDENTIFIER  shift, and go to state 10

    IDENTIFIER  [reduce using rule 72 (varDecl)]
    $default    reduce using rule 72 (varDecl)

    identifiers  go to state 11


State 3

    0 $accept: program . $end

    $end  shift, and go to state 12


State 4

    1 program: decList .

    $default  reduce using rule 1 (program)


State 5

   53 decList: . varDecl
   54        | . funcDecl
   54        | funcDecl .  [$end]
   55        | . varDecl decList
   56        | . funcDecl decList
   56        | funcDecl . decList
   57        | . KW_CONST identifiers ':' data_types ';'
   58        | . KW_CONST identifiers ':' data_types ';' decList
   59 funcDecl: . KW_CONST IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types
   60         | . KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body '}'
   61         | . KW_CONST IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types ARROW '{' body '}' ';'
   72 varDecl: . KW_LET
   73        | . KW_LET identifiers ':' data_types ';'

    KW_CONST  shift, and go to state 1
    KW_LET    shift, and go to state 2

    $default  reduce using rule 54 (decList)

    decList   go to state 13
    funcDecl  go to state 5
    varDecl   go to state 6


State 6

   53 decList: . varDecl
   53        | varDecl .  [$end]
   54        | . funcDecl
   55        | . varDecl decList
   55        | varDecl . decList
   56        | . funcDecl decList
   57        | . KW_CONST identifiers ':' data_types ';'
   58        | . KW_CONST identifiers ':' data_types ';' decList
   59 funcDecl: . KW_CONST IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types
   60         | . KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body '}'
   61         | . KW_CONST IDENTIFIER ASSIGN '(' funcParameters ')' ':' data_types ARROW '{' body '}' ';'
   72 varDecl: . KW_LET
   73        | . KW_LET identifiers ':' data_types ';'

    KW_CONST  shift, and go to state 1
    KW_LET    shift, and go to state 2

    $default  reduce using rule 53 (decList)

    decList   go to state 14
    funcDecl  go to state 5
    varDecl   go to state 6


State 7

   59 funcDecl: KW_CONST IDENTIFIER . ASSIGN '(' funcParameters ')' ':' data_types
   61         | KW_CONST IDENTIFIER . ASSIGN '(' funcParameters ')' ':' data_types ARROW '{' body '}' ';'
   74 arrayDecl: . '[' expr ']' ':' data_types
   79 identifiers: IDENTIFIER .  [':']
   80            | IDENTIFIER . ',' identifiers
   81            | IDENTIFIER . ASSIGN expr
   82            | IDENTIFIER . ASSIGN expr ',' identifiers
   83            | IDENTIFIER . arrayDecl
   84            | IDENTIFIER . arrayDecl ASSIGN expr

    ASSIGN  shift, and go to state 15
    ','     shift, and go to state 16
    '['     shift, and go to state 17

    $default  reduce using rule 79 (identifiers)

    arrayDecl  go to state 18


State 8

   60 funcDecl: KW_CONST KW_START . ASSIGN '(' ')' ':' KW_INT ARROW '{' body '}'

    ASSIGN  shift, and go to state 19


State 9

   57 decList: KW_CONST identifiers . ':' data_types ';'
   58        | KW_CONST identifiers . ':' data_types ';' decList

    ':'  shift, and go to state 20


State 10

   74 arrayDecl: . '[' expr ']' ':' data_types
   79 identifiers: IDENTIFIER .  [')', ',', ':']
   80            | IDENTIFIER . ',' identifiers
   81            | IDENTIFIER . ASSIGN expr
   82            | IDENTIFIER . ASSIGN expr ',' identifiers
   83            | IDENTIFIER . arrayDecl
   84            | IDENTIFIER . arrayDecl ASSIGN expr

    ASSIGN  shift, and go to state 21
    ','     shift, and go to state 16
    '['     shift, and go to state 17

    ','       [reduce using rule 79 (identifiers)]
    $default  reduce using rule 79 (identifiers)

    arrayDecl  go to state 18


State 11

   73 varDecl: KW_LET identifiers . ':' data_types ';'

    ':'  shift, and go to state 22


State 12

    0 $accept: program $end .

    $default  accept


State 13

   56 decList: funcDecl decList .

    $default  reduce using rule 56 (decList)


State 14

   55 decList: varDecl decList .

    $default  reduce using rule 55 (decList)


State 15

    2 expr: . IDENTIFIER
    3     | . INTEGER_CONST
    4     | . REAL_CONST
    5     | . STRING
    6     | . read_int
    7     | . read_string
    8     | . read_real
    9     | . KW_TRUE
   10     | . KW_FALSE
   11     | . func
   12     | . KW_NOT expr
   13     | . '-' expr
   14     | . expr '*' expr
   15     | . expr '/' expr
   16     | . expr '%' expr
   17     | . expr '+' expr
   18     | . expr '-' expr
   19     | . expr '>' expr
   20     | . expr '=' expr
   21     | . expr NOT_EQUAL expr
   22     | . expr '<' expr
   23     | . expr EQUAL_OR_LESS expr
   24     | . expr KW_AND expr
   25     | . expr KW_OR expr
   26     | . '(' expr ')'
   33 read_string: . RDSTRING '(' ')'
   34 read_int: . RDINT '(' ')'
   35 read_real: . RDREAL '(' ')'
   59 funcDecl: KW_CONST IDENTIFIER ASSIGN . '(' funcParameters ')' ':' data_types
   61         | KW_CONST IDENTIFIER ASSIGN . '(' funcParameters ')' ':' data_types ARROW '{' body '}' ';'
   62 func: . IDENTIFIER '(' funcParameters ')'
   81 identifiers: IDENTIFIER ASSIGN . expr
   82            | IDENTIFIER ASSIGN . expr ',' identifiers

    IDENTIFIER     shift, and go to state 23
    INTEGER_CONST  shift, and go to state 24
    REAL_CONST     shift, and go to state 25
    STRING         shift, and go to state 26
    KW_TRUE        shift, and go to state 27
    KW_FALSE       shift, and go to state 28
    KW_NOT         shift, and go to state 29
    RDSTRING       shift, and go to state 30
    RDINT          shift, and go to state 31
    RDREAL         shift, and go to state 32
    '-'            shift, and go to state 33
    '('            shift, and go to state 34

    expr         go to state 35
    read_string  go to state 36
    read_int     go to state 37
    read_real    go to state 38
    func         go to state 39


State 16

   79 identifiers: . IDENTIFIER
   80            | . IDENTIFIER ',' identifiers
   80            | IDENTIFIER ',' . identifiers
   81            | . IDENTIFIER ASSIGN expr
   82            | . IDENTIFIER ASSIGN expr ',' identifiers
   83            | . IDENTIFIER arrayDecl
   84            | . IDENTIFIER arrayDecl ASSIGN expr

    IDENTIFIER  shift, and go to state 10

    identifiers  go to state 40


State 17

    2 expr: . IDENTIFIER
    3     | . INTEGER_CONST
    4     | . REAL_CONST
    5     | . STRING
    6     | . read_int
    7     | . read_string
    8     | . read_real
    9     | . KW_TRUE
   10     | . KW_FALSE
   11     | . func
   12     | . KW_NOT expr
   13     | . '-' expr
   14     | . expr '*' expr
   15     | . expr '/' expr
   16     | . expr '%' expr
   17     | . expr '+' expr
   18     | . expr '-' expr
   19     | . expr '>' expr
   20     | . expr '=' expr
   21     | . expr NOT_EQUAL expr
   22     | . expr '<' expr
   23     | . expr EQUAL_OR_LESS expr
   24     | . expr KW_AND expr
   25     | . expr KW_OR expr
   26     | . '(' expr ')'
   33 read_string: . RDSTRING '(' ')'
   34 read_int: . RDINT '(' ')'
   35 read_real: . RDREAL '(' ')'
   62 func: . IDENTIFIER '(' funcParameters ')'
   74 arrayDecl: '[' . expr ']' ':' data_types

    IDENTIFIER     shift, and go to state 23
    INTEGER_CONST  shift, and go to state 24
    REAL_CONST     shift, and go to state 25
    STRING         shift, and go to state 26
    KW_TRUE        shift, and go to state 27
    KW_FALSE       shift, and go to state 28
    KW_NOT         shift, and go to state 29
    RDSTRING       shift, and go to state 30
    RDINT          shift, and go to state 31
    RDREAL         shift, and go to state 32
    '-'            shift, and go to state 33
    '('            shift, and go to state 41

    expr         go to state 42
    read_string  go to state 36
    read_int     go to state 37
    read_real    go to state 38
    func         go to state 39


State 18

   83 identifiers: IDENTIFIER arrayDecl .  [')', ',', ':']
   84            | IDENTIFIER arrayDecl . ASSIGN expr

    ASSIGN  shift, and go to state 43

    $default  reduce using rule 83 (identifiers)


State 19

   60 funcDecl: KW_CONST KW_START ASSIGN . '(' ')' ':' KW_INT ARROW '{' body '}'

    '('  shift, and go to state 44


State 20

   57 decList: KW_CONST identifiers ':' . data_types ';'
   58        | KW_CONST identifiers ':' . data_types ';' decList
   75 data_types: . KW_INT
   76           | . KW_REAL
   77           | . KW_BOOL
   78           | . KW_STRING

    KW_INT     shift, and go to state 45
    KW_REAL    shift, and go to state 46
    KW_BOOL    shift, and go to state 47
    KW_STRING  shift, and go to state 48

    data_types  go to state 49


State 21

    2 expr: . IDENTIFIER
    3     | . INTEGER_CONST
    4     | . REAL_CONST
    5     | . STRING
    6     | . read_int
    7     | . read_string
    8     | . read_real
    9     | . KW_TRUE
   10     | . KW_FALSE
   11     | . func
   12     | . KW_NOT expr
   13     | . '-' expr
   14     | . expr '*' expr
   15     | . expr '/' expr
   16     | . expr '%' expr
   17     | . expr '+' expr
   18     | . expr '-' expr
   19     | . expr '>' expr
   20     | . expr '=' expr
   21     | . expr NOT_EQUAL expr
   22     | . expr '<' expr
   23     | . expr EQUAL_OR_LESS expr
   24     | . expr KW_AND expr
   25     | . expr KW_OR expr
   26     | . '(' expr ')'
   33 read_string: . RDSTRING '(' ')'
   34 read_int: . RDINT '(' ')'
   35 read_real: . RDREAL '(' ')'
   62 func: . IDENTIFIER '(' funcParameters ')'
   81 identifiers: IDENTIFIER ASSIGN . expr
   82            | IDENTIFIER ASSIGN . expr ',' identifiers

    IDENTIFIER     shift, and go to state 23
    INTEGER_CONST  shift, and go to state 24
    REAL_CONST     shift, and go to state 25
    STRING         shift, and go to state 26
    KW_TRUE        shift, and go to state 27
    KW_FALSE       shift, and go to state 28
    KW_NOT         shift, and go to state 29
    RDSTRING       shift, and go to state 30
    RDINT          shift, and go to state 31
    RDREAL         shift, and go to state 32
    '-'            shift, and go to state 33
    '('            shift, and go to state 41

    expr         go to state 35
    read_string  go to state 36
    read_int     go to state 37
    read_real    go to state 38
    func         go to state 39


State 22

   73 varDecl: KW_LET identifiers ':' . data_types ';'
   75 data_types: . KW_INT
   76           | . KW_REAL
   77           | . KW_BOOL
   78           | . KW_STRING

    KW_INT     shift, and go to state 45
    KW_REAL    shift, and go to state 46
    KW_BOOL    shift, and go to state 47
    KW_STRING  shift, and go to state 48

    data_types  go to state 50


State 23

    2 expr: IDENTIFIER .  [KW_THEN, KW_LOOP, KW_AND, KW_OR, EQUAL_OR_LESS, NOT_EQUAL, '+', '-', '*', '/', '%', ')', '<', '>', '=', ',', ':', ';', ']']
   62 func: IDENTIFIER . '(' funcParameters ')'

    '('  shift, and go to state 51

    $default  reduce using rule 2 (expr)


State 24

    3 expr: INTEGER_CONST .

    $default  reduce using rule 3 (expr)


State 25

    4 expr: REAL_CONST .

    $default  reduce using rule 4 (expr)


State 26

    5 expr: STRING .

    $default  reduce using rule 5 (expr)


State 27

    9 expr: KW_TRUE .

    $default  reduce using rule 9 (expr)


State 28

   10 expr: KW_FALSE .

    $default  reduce using rule 10 (expr)


State 29

    2 expr: . IDENTIFIER
    3     | . INTEGER_CONST
    4     | . REAL_CONST
    5     | . STRING
    6     | . read_int
    7     | . read_string
    8     | . read_real
    9     | . KW_TRUE
   10     | . KW_FALSE
   11     | . func
   12     | . KW_NOT expr
   12     | KW_NOT . expr
   13     | . '-' expr
   14     | . expr '*' expr
   15     | . expr '/' expr
   16     | . expr '%' expr
   17     | . expr '+' expr
   18     | . expr '-' expr
   19     | . expr '>' expr
   20     | . expr '=' expr
   21     | . expr NOT_EQUAL expr
   22     | . expr '<' expr
   23     | . expr EQUAL_OR_LESS expr
   24     | . expr KW_AND expr
   25     | . expr KW_OR expr
   26     | . '(' expr ')'
   33 read_string: . RDSTRING '(' ')'
   34 read_int: . RDINT '(' ')'
   35 read_real: . RDREAL '(' ')'
   62 func: . IDENTIFIER '(' funcParameters ')'

    IDENTIFIER     shift, and go to state 23
    INTEGER_CONST  shift, and go to state 24
    REAL_CONST     shift, and go to state 25
    STRING         shift, and go to state 26
    KW_TRUE        shift, and go to state 27
    KW_FALSE       shift, and go to state 28
    KW_NOT         shift, and go to state 29
    RDSTRING       shift, and go to state 30
    RDINT          shift, and go to state 31
    RDREAL         shift, and go to state 32
    '-'            shift, and go to state 33
    '('            shift, and go to state 41

    expr         go to state 52
    read_string  go to state 36
    read_int     go to state 37
    read_real    go to state 38
    func         go to state 39


State 30

   33 read_string: RDSTRING . '(' ')'

    '('  shift, and go to state 53


State 31

   34 read_int: RDINT . '(' ')'

    '('  shift, and go to state 54


State 32

   35 read_real: RDREAL . '(' ')'

    '('  shift, and go to state 55


State 33

    2 expr: . IDENTIFIER
    3     | . INTEGER_CONST
    4     | . REAL_CONST
    5     | . STRING
    6     | . read_int
    7     | . read_string
    8     | . read_real
    9     | . KW_TRUE
   10     | . KW_FALSE
   11     | . func
   12     | . KW_NOT expr
   13     | . '-' expr
   13     | '-' . expr
   14     | . expr '*' expr
   15     | . expr '/' expr
   16     | . expr '%' expr
   17     | . expr '+' expr
   18     | . expr '-' expr
   19     | . expr '>' expr
   20     | . expr '=' expr
   21     | . expr NOT_EQUAL expr
   22     | . expr '<' expr
   23     | . expr EQUAL_OR_LESS expr
   24     | . expr KW_AND expr
   25     | . expr KW_OR expr
   26     | . '(' expr ')'
   33 read_string: . RDSTRING '(' ')'
   34 read_int: . RDINT '(' ')'
   35 read_real: . RDREAL '(' ')'
   62 func: . IDENTIFIER '(' funcParameters ')'

    IDENTIFIER     shift, and go to state 23
    INTEGER_CONST  shift, and go to state 24
    REAL_CONST     shift, and go to state 25
    STRING         shift, and go to state 26
    KW_TRUE        shift, and go to state 27
    KW_FALSE       shift, and go to state 28
    KW_NOT         shift, and go to state 29
    RDSTRING       shift, and go to state 30
    RDINT          shift, and go to state 31
    RDREAL         shift, and go to state 32
    '-'            shift, and go to state 33
    '('            shift, and go to state 41

    expr         go to state 56
    read_string  go to state 36
    read_int     go to state 37
    read_real    go to state 38
    func         go to state 39


State 34
